--- a/client/index.html
+++ b/client/index.html
@@ -3,22 +3,25 @@
 
 <head>
   <!-- Base href for correct path resolution if serving app from a subpath -->
-  <base href="/">
+  <base href="/" />
 
   <!-- Charset and viewport settings -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
 
   <!-- SEO meta tags -->
-  <meta name="description" content="Abhishek Doshi's portfolio showcases expertise in Flutter app development. Explore projects, blog posts, and hire one of the best Flutter developers." />
-  <meta name="keywords" content="Abhishek Doshi, Portfolio, Flutter, App Development, Best Flutter Developers, Web Development, Projects, Blog, Mobile App Development, Dart Programming, Cross-Platform Development, UI/UX Design, Software Engineer" />
+  <meta name="description"
+    content="Abhishek Doshi's portfolio showcases expertise in Flutter app development. Explore projects, blog posts, and hire one of the best Flutter developers." />
+  <meta name="keywords"
+    content="Abhishek Doshi, Portfolio, Flutter, App Development, Best Flutter Developers, Web Development, Projects, Blog, Mobile App Development, Dart Programming, Cross-Platform Development, UI/UX Design, Software Engineer" />
   <meta name="author" content="Abhishek Doshi" />
   <meta name="robots" content="index, follow" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  <meta name="language" content="en" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
 
   <!-- Canonical URL for SEO -->
-  <link rel="canonical" href="https://abhishekdoshi.dev">
+  <link rel="canonical" href="https://abhishekdoshi.dev" />
 
   <!-- Structured Data - JSON-LD format -->
   <script defer type="application/ld+json">
@@ -26,7 +29,12 @@
       "@context": "http://schema.org",
       "@type": "Person",
       "name": "Abhishek Doshi",
+      "alternateName": "Flutter Dev Abhishek Doshi",
       "url": "https://abhishekdoshi.dev",
+      "image": "https://raw.githubusercontent.com/AbhishekDoshi26/abhishek_doshi_portfolio/main/assets/images/dev_award.png",
+      "jobTitle": "Google Developer Expert - Dart, Flutter & Firebase",
+      "email": "adoshi26.ad@gmail.com",
+      "telephone": "+917818044311",
       "sameAs": [
         "https://www.linkedin.com/in/abhishekdoshi26",
         "https://github.com/AbhishekDoshi26",
@@ -34,46 +42,70 @@
         "https://www.instagram.com/abhishekdoshi26/",
         "https://abhishekdoshi26.medium.com/"
       ],
-      "jobTitle": "Google Developer Expert - Dart, Flutter & Firebase",
-      "email": "adoshi26.ad@gmail.com",
-      "telephone": "+917818044311",
-      "image": "https://raw.githubusercontent.com/AbhishekDoshi26/abhishek_doshi_portfolio/main/assets/images/dev_award.png",
-      "description": "Abhishek Doshi, a Google Developer Expert for Dart, Flutter & Firebase is passionate software engineer with expertise in app development. Checkout his work, articles, and testimonials!"
+      "description": "Abhishek Doshi, a Google Developer Expert for Dart, Flutter & Firebase is passionate software engineer with expertise in app development. Checkout his work, articles, and testimonials!",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Abhishek Doshi"
+      }
     }
   </script>
 
-  <!-- Open Graph (for social media sharing) -->
-  <meta property="og:title" content="Abhishek Doshi - Google Developer Expert">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://abhishekdoshi.dev">
-  <meta property="og:image" content="https://raw.githubusercontent.com/AbhishekDoshi26/abhishek_doshi_portfolio/main/assets/images/home_page_screenshot.png?v=5">
-  <meta property="og:description" content="Abhishek Doshi, a Google Developer Expert for Dart, Flutter & Firebase is passionate software engineer with expertise in app development. Checkout his work, articles and testimonials!">
-  <meta property="og:site_name" content="Abhishek Doshi - Google Developer Expert">
+  <!-- Breadcrumb Structured Data (optional) -->
+  <script defer type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [{
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://abhishekdoshi.dev"
+      }]
+    }
+  </script>
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Abhishek Doshi - Google Developer Expert" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://abhishekdoshi.dev" />
+  <meta property="og:image"
+    content="https://raw.githubusercontent.com/AbhishekDoshi26/abhishek_doshi_portfolio/main/assets/images/home_page_screenshot.png?v=5" />
+  <meta property="og:description"
+    content="Abhishek Doshi, a Google Developer Expert for Dart, Flutter & Firebase is passionate software engineer with expertise in app development. Checkout his work, articles and testimonials!" />
+  <meta property="og:site_name" content="Abhishek Doshi - Google Developer Expert" />
 
   <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@AbhishekDoshi26">
-  <meta name="twitter:title" content="Abhishek Doshi - Google Developer Expert">
-  <meta name="twitter:description" content="Abhishek Doshi, a Google Developer Expert for Dart, Flutter & Firebase is passionate software engineer with expertise in app development. Checkout his work, articles and testimonials!">
-  <meta name="twitter:image" content="https://raw.githubusercontent.com/AbhishekDoshi26/abhishek_doshi_portfolio/main/assets/images/home_page_screenshot.png">
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@AbhishekDoshi26" />
+  <meta name="twitter:creator" content="@AbhishekDoshi26" />
+  <meta name="twitter:title" content="Abhishek Doshi - Google Developer Expert" />
+  <meta name="twitter:description"
+    content="Abhishek Doshi, a Google Developer Expert for Dart, Flutter & Firebase is passionate software engineer with expertise in app development. Checkout his work, articles and testimonials!" />
+  <meta name="twitter:image"
+    content="https://raw.githubusercontent.com/AbhishekDoshi26/abhishek_doshi_portfolio/main/assets/images/home_page_screenshot.png" />
 
   <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Abhishek Doshi - Google Developer Expert">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="apple-mobile-web-app-title" content="Abhishek Doshi - Google Developer Expert" />
+  <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>Abhishek Doshi - Google Developer Expert | Mobile App Development, UI/UX Design, Software Engineer</title>
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#ffffff" />
 
   <!-- Manifest -->
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="manifest.json" />
 
-  <!-- Replit badge script (you can remove this if not needed) -->
-  <script type="text/javascript" src="https://replit.com/public/js/replit-badge-v3.js"></script>
+  <!-- Preload important image or font (optional example) -->
+  <link rel="preload" as="image"
+    href="https://raw.githubusercontent.com/AbhishekDoshi26/abhishek_doshi_portfolio/main/assets/images/home_page_screenshot.png" />
+  <!-- Example font preload if used -->
+  <!-- <link rel="preload" href="/fonts/your-font.woff2" as="font" type="font/woff2" crossorigin="anonymous" /> -->
 
+  <title>Abhishek Doshi - Google Developer Expert | Mobile App Development, UI/UX Design, Software Engineer</title>
 </head>
 
 <body>
