feat: updated image

--- a/client/index.html
+++ b/client/index.html
@@ -69,7 +69,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://abhishekdoshi.dev" />
   <meta property="og:image"
-    content="https://github.com/AbhishekDoshi26/portfolio_css/blob/main/client/image.png?v=5" />
+    content="https://raw.githubusercontent.com/AbhishekDoshi26/portfolio_css/main/client/image.png?v=5" />
   <meta property="og:description"
     content="Abhishek Doshi, a Google Developer Expert for Dart, Flutter & Firebase is passionate software engineer with expertise in app development. Checkout his work, articles and testimonials!" />
   <meta property="og:site_name" content="Abhishek Doshi - Google Developer Expert" />
@@ -82,7 +82,7 @@
   <meta name="twitter:description"
     content="Abhishek Doshi, a Google Developer Expert for Dart, Flutter & Firebase is passionate software engineer with expertise in app development. Checkout his work, articles and testimonials!" />
   <meta name="twitter:image"
-    content="https://github.com/AbhishekDoshi26/portfolio_css/blob/main/client/image.png" />
+    content="https://raw.githubusercontent.com/AbhishekDoshi26/portfolio_css/main/client/image.png" />
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -101,7 +101,7 @@
 
   <!-- Preload important image or font (optional example) -->
   <link rel="preload" as="image"
-    href="https://github.com/AbhishekDoshi26/portfolio_css/blob/main/client/image.png" />
+    href="https://raw.githubusercontent.com/AbhishekDoshi26/portfolio_css/main/client/image.png" />
   <!-- Example font preload if used -->
   <!-- <link rel="preload" href="/fonts/your-font.woff2" as="font" type="font/woff2" crossorigin="anonymous" /> -->
 
